--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.h2.console.enabled=true
 spring.datasource.url= jdbc:h2:mem:abdullah
 spring.sql.init.platform=h2
+spring.jpa.defer-datasource-initialization=true
